...
        android:dropDownVerticalOffset="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SearchView
        android:id="@+id/imageSearcher"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="#CAC9C9"
        android:visibility="visible"
        android:focusable="true"
...
        android:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@id/imageSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridView
        android:id="@+id/imageGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
...
