...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnDeleteImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="Delete Image"
        android:textColor="@android:color/white"
...
