<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendee.AttendeeEvent"
    android:clickable="true">


    <SearchView
        android:id="@+id/eventSearcher"
        android:layout_width="340dp"
        android:layout_height="32dp"
        android:layout_marginTop="102dp"
        android:background="#CAC9C9"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:iconifiedByDefault="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventSearcher" />

</androidx.constraintlayout.widget.ConstraintLayout>
