<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventDescription"
        android:textColor="@color/black"
        android:layout_width="161dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="Event Description"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:text="Event Date"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/eventDescription" />


    <Button
        android:id="@+id/btnViewEvent"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:text="@string/select"
        android:backgroundTint="#FFDB58"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>