...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileName"
        android:layout_width="161dp"
        android:layout_height="35sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="Profile Name"
        android:textColor="@color/black"
...
        android:text="Profile Role"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="60dp"
        android:layout_height="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24sp"
        android:textSize="12sp"
...
